# lcas3

./: .replit  README.md  pyproject.toml  run_lcas.py  test_plugins_quick.py
attached_assets/: Pasted--LCAS3-PS-C-Users-manny-lcas3-LCAS-2-python-C-Users-manny-lcas3-LCAS-2-lcas2-gui-main-gui-py-20-1750682717816_1750682717819.txt  Pasted-2025-06-23-13-01-34-900-lcas2-gui-main-gui-INFO-Status-Update-Initializing-LCAS-Core-2025-1750683874578_1750683874581.txt  Pasted-2025-06-23-13-05-14-967-lcas2-gui-main-gui-INFO-Status-Update-Initializing-LCAS-Core-2025-1750683993625_1750683993627.txt  Pasted-2025-06-23-13-08-07-012-lcas2-gui-main-gui-INFO-Status-Update-Initializing-LCAS-Core-2025-1750684142961_1750684142962.txt  Pasted-2025-06-23-13-16-06-269-lcas2-core-core-PluginManager-ERROR-Error-loading-plugin-advanced-patt-1750684792816_1750684792830.txt  main_1750683081180.py  main_gui_1750683067527.py
config/: ai_config.json  lcas_config.json
lcas2/: LICENSE.txt  main.py  requirements.txt
lcas2/agents/: __init__.py  agent_coordinator.py  base_agent.py  case_strategist_agent.py  document_intelligence_agent.py  evidence_analyst_agent.py  legal_specialist_agent.py  pattern_discovery_agent.py  timeline_agent.py
lcas2/core/: __init__.py  core.py  data_models.py  utils.py
lcas2/gui/: __init__.py  main_gui.py
lcas2/lcas-adk-agents/: __init__.py  content_extraction_agent.py  data_models.py  file_processing_agent.py  main_coordinator_agent.py  test_basic_workflow.py
lcas2/plugins/: __init__.py  ai_foundation_plugin.py  main.py  (+13 more)
tests/: __init__.py  test_core.py  test_utils.py
(+2 files in other folders)
