[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "customtkinter==5.2.2",
    "dotbot>=1.22.0",
    "dotenv-linter==0.5.0",
    "dotrun==2.4.1",
    "load-dotenv==0.1.0",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "poetry-dotenv-plugin==0.2.0",
    "poetry-plugin-dotenv==2.6.0",
    "python-dotenv-run>=0.1.4",
    "python-dotenv==1.0.1",
]
